--- a/form/index.html
+++ b/form/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>참가 신청서</title>
-    <link rel="stylesheet" href="form_style.css">
+    <link rel="stylesheet" href="/form/form_style.css">
 </head>
 <body>
     <h1>참가 신청서</h1>
