--- a/lotto number generator/index.html
+++ b/lotto number generator/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> 로또 넘버 추첨기</title>
 <link rel="stylesheet" href="style.css">
+<meta name="google-adsense-account" content="ca-pub-7154286579561535">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7154286579561535"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
