feat: add google analytics tag

--- a/lotto number generator/index.html
+++ b/lotto number generator/index.html
@@ -6,7 +6,16 @@
 <title> 로또 넘버 추첨기</title>
 <link rel="stylesheet" href="style.css">
 <meta name="google-adsense-account" content="ca-pub-7154286579561535">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7154286579561535"
+<!-- Google tag (gtag.js) -->
+<script async src="https.www.googletagmanager.com/gtag/js?id=G-XW3MJNFM9B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XW3MJNFM9B');
+</script>
+<script async src="https.pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7154286579561535"
      crossorigin="anonymous"></script>
 </head>
 <body>
